Update the dates and makefile.

--- a/scipy/basic/session2.tex
+++ b/scipy/basic/session2.tex
@@ -82,9 +82,7 @@ Python}
 \author[FOSSEE] {FOSSEE}
 
 \institute[FOSSEE -- IITB] {Department of Aerospace Engineering\\IIT Bombay}
-\date[] {SciPy India 2016\\
-Mumbai
-}
+\date[] {Mumbai, India}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
