--- a/scipy/basic/session4.tex
+++ b/scipy/basic/session4.tex
@@ -85,8 +85,8 @@ Python}
 \author[Prabhu] {FOSSEE}
 
 \institute[FOSSEE -- IITB] {Department of Aerospace Engineering\\IIT Bombay}
-\date[] {SciPy India, 2016\\
-Mumbai
+\date[] {
+Mumbai, India
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
