--- a/scipy/basic/session3.tex
+++ b/scipy/basic/session3.tex
@@ -81,9 +81,7 @@ Python}
 \author[FOSSEE] {FOSSEE}
 
 \institute[FOSSEE -- IITB] {Department of Aerospace Engineering\\IIT Bombay}
-\date[] {SciPy India 2016\\
-Mumbai
-}
+\date[] {Mumbai, India}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\pgfdeclareimage[height=0.75cm]{iitmlogo}{iitmlogo}
