--- a/scipy/basic/prelims.tex
+++ b/scipy/basic/prelims.tex
@@ -167,7 +167,7 @@ $
   \frametitle{Python standard library}
   \begin{itemize}
   \item Built-in
-  \item Batteries included
+  \item ``Batteries included''
   \item Lot of important functionality
   \end{itemize}
 \end{frame}
@@ -210,7 +210,8 @@ $
   \frametitle{Python distribution: Canopy}
   \begin{itemize}
   \item \url{www.enthought.com/products/canopy}
-  \item Easy to use, simple
+  \item Easy to use
+  \item Simple IDE
   \item Cross platform: Linux, OSX, Windows
   \item Free installer
   \item Many packages
@@ -221,7 +222,6 @@ $
   \frametitle{Python distribution: Anaconda}
   \begin{itemize}
   \item \url{www.continuum.io/downloads}
-  \item Easy to use, simple
   \item Cross platform: Linux, OSX, Windows
   \item Free installer
   \item Many packages
@@ -231,7 +231,7 @@ $
 \begin{frame}[plain]
   \frametitle{For this course}
   \begin{itemize}
-  \item Using Canopy!
+  \item Using Canopy
   \item Simple UI
   \item Easy for beginners
     \vspace*{0.25in}
